@startuml ViewLayer
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #E8F4F8
skinparam classBorderColor #0066CC
skinparam arrowColor #0066CC

package "VIEW LAYER" {
    class MainWindow
    class CountryView
    class ChampionshipView
    class MatchView
    class PersonView
    class GoalView
    class GoalTypeView
    class PlayerSquadView
    class CoachMatchView
    class StatisticsView
}

MainWindow --> CountryView : Contains
MainWindow --> ChampionshipView : Contains
MainWindow --> MatchView : Contains
MainWindow --> PersonView : Contains
MainWindow --> GoalView : Contains
MainWindow --> GoalTypeView : Contains
MainWindow --> PlayerSquadView : Contains
MainWindow --> CoachMatchView : Contains
MainWindow --> StatisticsView : Contains

@enduml
